# task-ftp-backup

./: .gitignore  CMakeLists.txt  README.rst  ftp-backup.sln  sqlite_connection.cpp  sqlite_connection.h  sqlite_query.cpp  sqlite_query.h
app/: CMakeLists.txt  dump.cpp  dump.h  ftp-backup.vcxproj  ftp-backup.vcxproj.filters  main.cpp  options.cpp  options.h  random_data.h
lib/: CMakeLists.txt  ftp-backup-lib.vcxproj  ftp-backup-lib.vcxproj.filters
lib/database/: data_generator.cpp  data_generator.h  query_builder.cpp  query_builder.h  sqlite3_fwd.h  sqlite_connection.cpp  sqlite_connection.h  sqlite_dump.cpp  sqlite_dump.h  sqlite_query.cpp  sqlite_query.h
lib/ftp/: ftp_client.cpp  ftp_client.h  ftp_connection_parameters.h  ftp_control_connection.cpp  ftp_control_connection.h
lib/network/: tcp_socket.cpp  tcp_socket.h
lib/utility/: command_line_parser.cpp  command_line_parser.h  format.h  string_utils.h
test/: CMakeLists.txt  ftp-backup-test.vcxproj  main.cpp
test/database/: test_dump.cpp  test_query_builder.cpp  test_query_builder.h  test_sqlite.cpp  test_sqlite.h
test/ftp/: test_ftp.cpp  test_ftp.h
test/network/: test_socket.cpp  test_socket.h
test/utility/: test_cmd_parser.cpp  test_cmd_parser.h  test_string_utils.cpp
